# flesh

./: .gitignore  .travis.yml  README.md  flesh.cabal  package.yaml
app/: Main.hs
hspec-src/Flesh/Language/Parser/: AliasSpec.hs  BufferSpec.hs  ClassSpec.hs  ClassTestUtil.hs  ErrorSpec.hs  ErrorTestUtil.hs  InputSpec.hs  LexSpec.hs  SyntaxSpec.hs  Syntax_CommandSpec.hs  Syntax_ListSpec.hs  Syntax_RedirSpec.hs  Syntax_TokenSpec.hs  TestUtil.hs
hspec-src/Flesh/Source/: PositionTestUtil.hs
src/Flesh/Data/: Char.hs
src/Flesh/Language/: Alias.hs  Pretty.hs  Syntax.hs
src/Flesh/Language/Alias/: Core.hs
src/Flesh/Language/Parser/: Alias.hs  Buffer.hs  Capture.hs  Char.hs  Class.hs  Error.hs  HereDoc.hs  Input.hs  Lex.hs  Syntax.hs  Warning.hs
src/Flesh/Language/Parser/Error/: Print.hs
src/Flesh/Language/Syntax/: Print.hs
src/Flesh/Source/: Position.hs
src/Flesh/Source/Position/: Print.hs
src/Flesh/Text/: Show.hs
