name:                flesh
version:             0.1.0.0
synopsis:            Flexible POSIX shell
-- description:
homepage:            https://github.com/magicant/flesh
license:             GPL-2
license-file:        LICENSE
author:              WATANABE Yuki
maintainer:          magicant@wonderwand.net
copyright:           2017 WATANABE Yuki
category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Flesh.Language.Parser.Error,
                       Flesh.Source.Position
  build-depends:       base >= 4.7 && < 5,
                       mtl >= 2.2.1 && < 2.3
  default-language:    Haskell2010

executable flesh
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base,
                       flesh
-- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite flesh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       flesh
-- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/magicant/flesh
