name:                flesh
version:             0.1.0.0
synopsis:            Flexible POSIX shell
-- description:
homepage:            https://github.com/magicant/flesh
license:             GPL-2
license-file:        LICENSE
author:              WATANABE Yuki
maintainer:          magicant@wonderwand.net
copyright:           2017 WATANABE Yuki
category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Flesh.Language.Alias,
                       Flesh.Language.Alias.Core,
                       Flesh.Language.Parser.Alias,
                       Flesh.Language.Parser.Char,
                       Flesh.Language.Parser.Error,
                       Flesh.Language.Parser.HereDoc,
                       Flesh.Language.Parser.Input,
                       Flesh.Language.Parser.Lex,
                       Flesh.Language.Parser.Syntax,
                       Flesh.Language.Parser.Warning,
                       Flesh.Language.Syntax,
                       Flesh.Language.Syntax.Print,
                       Flesh.Source.Position
  build-depends:       base >= 4.9 && < 5,
                       containers >= 0.5.0.0 && < 1,
                       mtl >= 2.2.1 && < 2.3,
                       text >= 1.0.0.0 && < 2,
                       transformers >= 0.4 && < 0.6
  ghc-options:         -Wall
  default-language:    Haskell2010

executable flesh
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base,
                       flesh
  ghc-options:         -Wall
-- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite flesh-hspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      hspec-src
  main-is:             Main.hs
  other-modules:       Flesh.Language.Parser.AliasSpec,
                       Flesh.Language.Parser.ErrorSpec,
                       Flesh.Language.Parser.LexSpec,
                       Flesh.Language.Parser.SyntaxSpec,
                       Flesh.Language.Parser.TestUtil
  build-depends:       base,
                       containers >= 0.5.0.0 && < 1,
                       flesh,
                       hspec >= 2 && < 3,
                       mtl >= 2.2.1 && < 2.3,
                       QuickCheck >= 2.8.2 && < 3,
                       text >= 1.0.0.0 && < 2,
                       transformers >= 0.4 && < 0.6
  ghc-options:         -Wall
-- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/magicant/flesh

-- vim: set et:
